# sync-uv-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  script.py
.github/workflows/: lint.yaml
src/scripts/: check.sh  lint.sh
src/sync_rye_pre_commit/: cli.py  sync_rye_pre_commit.py
src/sync_uv_pre_commit/: cli.py  export.py  export.py.j2  log.py  package.py  render.py  toml.py
