[project]
name = "sync-rye-pre-commit"
version = "0.0.0"
description = "Sync rye and pre commit"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
scripts = { sync_rye_pre_commit = "sync_rye_pre_commit.cli:main" }
dependencies = [
    "pre-commit>=3.8.0",
]

[tool.uv]
managed = true
dev-dependencies = [
    "ruff==0.5.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sync_rye_pre_commit"]

[tool.hatch.build.targets.sdist]
packages = ["src/sync_rye_pre_commit"]