[project]
name = "sync-uv-pre-commit"
version = "0.0.0"
description = "Sync uv and pre commit"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
scripts = { sync_uv_pre_commit = "sync_uv_pre_commit.cli:main" }
dependencies = [
    "packaging",
    "pre-commit>=3.5.0",
    "toml>=0.10.2",
    "typing-extensions>=4.12.2",
]

[tool.uv]
managed = true
dev-dependencies = [
    "ruff==0.6.4",
    "poethepoet>=0.27.0",
]

[tool.poe.tasks]
lint = ["lint:check", "lint:format"]
"lint:check" = "ruff check src --fix"
"lint:format" = "ruff format src"
check = "pre-commit run --all-files --show-diff-on-failure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync_uv_pre_commit"]

[tool.hatch.build.targets.sdist]
packages = ["src/sync_uv_pre_commit"]
