[project]
name = "sync-uv-pre-commit"
version = "0.0.0"
description = "Sync uv and pre commit"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
scripts = { generate_cli_script = "sync_uv_pre_commit.render:generate_script" }
dependencies = [
    "packaging",
    "pre-commit>=3.5.0",
    "tomlkit>=0.13.2",
    "typing-extensions>=4.12.2",
]
[dependency-groups]
dev = [
    "ruff==0.8.4",
    "poethepoet>=0.27.0",
    "jinja2>=3.1.5",
]

[tool.uv]
managed = true
default-groups = ["dev"]

[tool.poe.tasks]
lint = ["_lint:check", "_lint:format"]
check = "pre-commit run --all-files --show-diff-on-failure"
"_lint:check" = "ruff check src --fix"
"_lint:format" = "ruff format src"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync_uv_pre_commit"]

[tool.hatch.build.targets.sdist]
packages = ["src/sync_uv_pre_commit"]
